explorer save and map with team positive cases working commit. also changes in SQL schemas
